--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,3 +1,50 @@
+format = """
+$directory\
+$git_branch\
+$git_status\
+$fill\
+$lua\
+$python\
+$rust\
+$c\
+$cpp\
+$cmake\
+$golang\
+$docker_context\
+$jobs\
+$cmd_duration\
+$line_break\
+$character"""
+
+add_newline = true
+palette = 'nord'
+
+[directory.substitutions]
+'Documents' = '󰈙'
+'Downloads' = ' '
+'Music' = ' '
+'Pictures' = ' '
+
+[fill]
+symbol = "_"
+
+[directory]
+style = "bold fg:dark_blue"
+format = "[$path ]($style) " 
+truncation_length = 3
+truncation_symbol = "-/"
+truncate_to_repo = false
+read_only = " 󰌾"
+
+[git_branch]
+style = 'fg:green'
+symbol = ' '
+format = '[on](white) [$symbol$branch ]($style)'
+
+[git_status]
+style = 'fg:green'
+format = '([$all_status$ahead_behind]($style) )'
+
 [aws]
 symbol = "  "
 
@@ -28,9 +75,6 @@ symbol = " "
 [deno]
 symbol = " "
 
-[directory]
-read_only = " 󰌾"
-
 [docker_context]
 symbol = " "
 
@@ -48,9 +92,6 @@ symbol = " "
 
 [gcloud]
 symbol = "  "
-
-[git_branch]
-symbol = " "
 
 [git_commit]
 tag_symbol = '  '
@@ -176,6 +217,7 @@ symbol = " "
 
 [rust]
 symbol = "󱘗 "
+format = 'via [$symbol $version](red bold)'
 
 [scala]
 symbol = " "
@@ -188,3 +230,29 @@ symbol = " "
 
 [gradle]
 symbol = " "
+
+[palettes.nord]
+dark_blue = '#5E81AC'
+blue = '#81A1C1'
+teal = '#88C0D0'
+red = '#BF616A'
+orange = '#D08770'
+green = '#A3BE8C'
+yellow = '#EBCB8B'
+purple = '#B48EAD'
+gray = '#434C5E'
+black = '#2E3440'
+white='#D8DEE9'
+
+[palettes.onedark]
+dark_blue='#61afef'
+blue='#56b6c2'
+red='#e06c75'
+green='#98c379'
+purple='#c678dd'
+cyan='#56b6c2'
+orange='#be5046'
+yellow='#e5c07b'
+gray='#828997'
+white ='#abb2bf'
+black='#2c323c'
