--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -12,3 +12,14 @@ desc = "Cd to ~/.config"
 on   = ["b","r"]
 run  = "plugin fazif fazifrg"
 desc = "Search content in selected files with ripgrep+fzf"
+
+# keymap.toml
+[[mgr.prepend_keymap]]
+on   = "+"
+run  = "plugin zoom 1"
+desc = "Zoom in hovered file"
+
+[[mgr.prepend_keymap]]
+on   = "-"
+run  = "plugin zoom -1"
+desc = "Zoom out hovered file"
