--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -23,3 +23,9 @@ desc = "Zoom in hovered file"
 on   = "-"
 run  = "plugin zoom -1"
 desc = "Zoom out hovered file"
+
+[[mgr.prepend_keymap]]
+on = "<Esc>"
+run = ["escape --all", "unyank"]
+desc = "Unyank all"
+
